--- a/LoginStyleSheet.css
+++ b/LoginStyleSheet.css
@@ -1,5 +1,11 @@
 @charset "utf-8";
 
+:root {
+    --c-text-light: whitesmoke;
+    --c-button: whitesmoke;
+    --c-button-hover: rgb(0, 0, 0, 0.5);
+}
+
 @keyframes FadeInAnim {
     from {
         opacity: 0;
@@ -34,7 +40,7 @@
 
 form {
     background-color: transparent;
-    border: 1px solid whitesmoke;
+    border: 1px solid var(--c-text-light);
     border-radius: 20px;
     backdrop-filter: blur(5px);
     min-width: 350px;
@@ -44,7 +50,7 @@ form {
     display: grid;
     gap: 30px;
     text-align: center;
-    color: whitesmoke;
+    color: var(--c-text-light);
     position: relative;
     opacity: 0;
     top: -25%;
@@ -61,7 +67,7 @@ form {
 
 .bo-input-group > label {
     position: absolute;
-    color: whitesmoke;
+    color: var(--c-text-light);
     pointer-events: none;
     top: 75%;
     left: 10px;
@@ -72,10 +78,10 @@ form {
 .bo-input-group > input {
     background-color: transparent;
     border: none;
-    border-bottom: 1px solid whitesmoke;
+    border-bottom: 1px solid var(--c-text-light);
     border-radius: 10px;
     outline: none;
-    color: whitesmoke;
+    color: var(--c-text-light);
     padding: 30px 10px 10px 10px;
     width: 100%;
     transition: border-bottom 0.3s ease-in-out;
@@ -99,14 +105,14 @@ form > [type="submit"] {
     text-align: center;
     width: 75%;
     padding: 20px;
-    border: 1px solid whitesmoke;
+    border: 1px solid var(--c-text-light);
     border-radius: 10px;
-    background-color: whitesmoke;
+    background-color: var(--c-button);
     text-transform: uppercase;
     transition: background-color 0.3s ease-in-out;
 }
 
 form > [type="submit"]:hover {
-    background-color: rgb(0, 0, 0, 0.5);
-    color: whitesmoke;
+    background-color: var(--c-button-hover);
+    color: var(--c-text-light);
 }
