--- a/LayoutTest/Flex-StyleSheet.css
+++ b/LayoutTest/Flex-StyleSheet.css
@@ -1,12 +1,12 @@
 @charset "utf-8";
 
 :root {
-    --c-black-russian: #1E1E2A;
-    --c-solid-pink: #7D444F;
-    --c-topaz: #7B7794;
-    --c-sea-buckthorn: #EB9653;
-    --c-grape: #44404D;
-    --c-text-light:ghostwhite;
+    --c-background: #1E1E2A;      /* black-russian */
+    --c-foreground-dark: #44404D; /* grape */
+    --c-foreground: #7B7794;      /* topaz */
+    --c-solid-pink: #7D444F;      /* solid-pink */
+    --c-highlight: #EB9653;       /* sea-buckthorn */
+    --c-text-light:ghostwhite;    /* */
 }
 
 *, *::before, *::after {
@@ -20,7 +20,7 @@
 }
 
 body {
-    background-color: var(--c-black-russian);
+    background-color: var(--c-background);
     color: var(--c-text-light);
     overflow: auto;
     height: 100vh;
@@ -30,8 +30,12 @@ body {
     column-gap: 1rem;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    margin-bottom: 1rem;
+}
+
 .bo-navbar {
-    background-color: var(--c-grape);
+    background-color: var(--c-foreground-dark);
     border-radius: 1rem;
     padding: 1rem;
     flex: 0 0 25%;
@@ -43,21 +47,23 @@ body {
 }
 
 .bo-navbar-btn {
-    background-color: var(--c-topaz);
+    background-color: var(--c-background);
     color: var(--c-text-light);
-    border: none;
-    border-radius: 10%;
+    border: 1px solid var(--c-foreground);
+    border-radius: 20%;
     padding: 1rem;
     display: none;
     margin-left: auto;
 }
 
     .bo-navbar-btn:hover {
-        background-color: var(--c-sea-buckthorn);
+        background-color: var(--c-foreground);
     }
 
 .bo-navbar-collapse {
     width: 100%;
+    display: block;
+    flex: 1 1 auto;
 }
 
 .bo-nav {
@@ -97,11 +103,11 @@ body {
     }
 
 .bo-flex-container {
-    background-color: var(--c-grape);
+    background-color: var(--c-foreground-dark);
     border-radius: 1rem;
     padding: 1rem;
     height: 100%;
-    flex: 1 0 auto;
+    flex: 1 1 auto;
 }
 
 /* md breakpoint */
@@ -126,11 +132,11 @@ body {
 
     .bo-navbar-collapse {
         display: none;
-        margin-top: 1rem;
     }
 
         .bo-navbar-collapse.show {
             display: block;
+            margin-top: 1rem;
         }
 
     .bo-nav {
