--- a/LayoutTest/Flex-StyleSheet.css
+++ b/LayoutTest/Flex-StyleSheet.css
@@ -10,11 +10,12 @@
 }
 
 *, *::before, *::after {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     scroll-behavior: smooth;
     font-family: Arial, Verdana, sans-serif;
     font-weight: normal;
-    font-size: normal;
     padding: 0;
     margin: 0;
 }
@@ -120,6 +121,7 @@ h1, h2, h3, h4, h5, h6 {
 .bo-nav-link {
     text-align: left;
     text-decoration: none;
+    border-radius: 1rem;
     color: var(--c-text-light);
     padding: 1rem;
     display: block;
@@ -140,8 +142,16 @@ h1, h2, h3, h4, h5, h6 {
     flex: 1 1 auto;
 }
 
+.size-test {
+    background-color: var(--c-foreground);
+    border-radius: 1rem;
+    padding: 1rem;
+    width: max(calc(100% - 200px), 75%);
+    margin: 0 auto;
+}
+
 /* md breakpoint */
-@media screen and (max-width: 768px) {
+@media screen and (width <= 768px) {
     body {
         flex-direction: column;
         row-gap: 1rem;
