--- a/Navbar/StyleSheet.css
+++ b/Navbar/StyleSheet.css
@@ -1,10 +1,9 @@
 @charset "utf-8";
 
-:root {
-}
-
 *, *::before, *::after {
     box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     scroll-behavior: smooth;
     font-family: Arial, Verdana, sans-serif;
     font-weight: normal;
@@ -14,6 +13,7 @@
 }
 
 body {
+    min-height: 100vh;
     background-color: ghostwhite;
     color: rgb(55, 55, 55);
 }
@@ -31,7 +31,7 @@ body {
     align-items: center;
     padding: 1rem clamp(1rem, 50px, 1.2rem);
     backdrop-filter: blur(20px);
-    position: relative;
+    overflow: hidden;
 }
 
     .bo-navbar:hover {
@@ -63,7 +63,7 @@ body {
 
 .bo-navbar-collapse {
     width: 100%;
-    flex: 1 1 50%;
+    flex: 0 0 50%;
     display: inline-flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -80,7 +80,8 @@ body {
         background-color: rgb(255, 255, 255, 50%);
     }
 
-@media screen and (max-width: 768px) {
+/* bootstrap md breakpoint */
+@media screen and (width <= 768px) {
     .bo-navbar-btn {
         display: block;
     }
