--- a/Sidebar/StyleSheet.css
+++ b/Sidebar/StyleSheet.css
@@ -23,25 +23,29 @@
 body {
     background-color: var(--c-background);
     color: var(--c-text-light);
+    padding: 1rem;
     height: 100vh;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 1rem;
-    padding: 1rem;
 }
 
 header {
     background-color: var(--c-foreground-dark);
-    flex: 0 0 20%;
     border-radius: 1rem;
     padding: 1rem;
+    flex: 0 0 10%;
 }
 
 main {
     background-color: var(--c-foreground-dark);
-    flex: 1 1 auto;
     border-radius: 1rem;
     padding: 1rem;
+    flex: 1 1 auto;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0.5rem 0.25rem;
 }
 
 .bo-bg-background { background-color: var(--c-background); }
@@ -49,35 +53,3 @@ main {
 .bo-bg-foreground { background-color: var(--c-foreground); }
 .bo-bg-secondary { background-color: var(--c-secondary); }
 .bo-bg-highlight { background-color: var(--c-highlight); }
-
-.bo-panel-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    overflow: hidden;
-}
-
-/* Fades in (default) */
-.bo-scroll-target {
-    background-color: var(--c-foreground);
-    flex: 1 1 auto;
-    border-radius: 1rem;
-    padding: 5rem;
-    opacity: 0;
-    transition: opacity 2s;
-}
-
-    .bo-scroll-target.show {
-        opacity: 1;
-    }
-
-.bo-scroll-slidein-right {
-    position: relative;
-    right: -50%;
-    transition: right 1s;
-}
-
-    .bo-scroll-slidein-right.show {
-        right: 0;
-    }
